--- a/3-UserNotes/3.2-TransportandStorage.md
+++ b/3-UserNotes/3.2-TransportandStorage.md
@@ -1,10 +1,19 @@
-# TransportandStorage
+# 运输与储存
 
-## 1 Packing and packing
+<!-- ![CheckTheBox_4](../resources/3-UserNotes/image/CheckTheBox_4.png) -->
 
-## 2 Logistics and transportation
+运输过程中，应使用原包装运输 Mercury A1。运输过程中，应确保 Mercury A1 整体稳定，并通过适当的措施固定。
 
-## 3 Equipment storage
+运输和长期储存期间，环境温度应保持在 -20 至 +55°C 范围内，湿度≤95%，无凝露。
+
+机器人属于精密机械，从包装中取出 Mercury A1 时，应小心轻放。运输过程中，如果不能平稳放置，可能会引起振动并损坏机器人内部部件。
+
+运输完成后，应将原包装妥善存放在干燥的地方，以备日后重新包装和运输需要。
+
+|<div align=center><img src="../resources/3-UserNotes/image/danger.png" alt="img-1" width="100" height=“auto” />|
+| :--- |
+| 1 对运输过程中发生的任何损坏概不负责。. |
+| 2 安装机器人时，请务必严格遵循安装说明。 |
 
 ----
-[← Previous Section](3.1-SafetyInstruction.md#) | [Next Chapter →](3.3-MaintenanceandCare.md)
+[← 上一节](3.1-SafetyInstruction.md#) | [下一章 →](3.3-MaintenanceandCare.md)
