--- a/4-FirstInstallAndUse/4.3-Power-onTestGuide.md
+++ b/4-FirstInstallAndUse/4.3-Power-onTestGuide.md
@@ -1,85 +1,83 @@
-# Boot detection guide
+# 开机检测指南
 
-## 1 Structural installation and fixation
+## 1 结构安装固定
 
-myCobot weights 3.3 kg. Due to the fact that the center of gravity will change along with the movement of the robot during utilization, robot is required to be fixed on a solid base at the beginning. A fixed base, or mobile base are both acceptable.
+myCobot 重量 3.3kg，由于使用过程中重心会随着机器人的移动而变化，因此一开始需要将机器人固定在一个牢固的底座上，固定底座，移动底座都可以。
 
-#### Base Interface Size
+#### 底座接口尺寸
 
-* The base fixing holes act as the interface between robot and other bases or planes. The specific hole size is shown in the figure below. There are 4 countersunk holes with a diameter of 4.5 mm, which can be fixed with M6 bolts.
+* 底座固定孔是机器人与其他底座或平面的接口，具体孔径如下图所示，共有 4 个直径为 4.5mm 的沉头孔，可用 M6 螺栓固定。
 
-<img src="../..//resources/4-FirstInstallAndUse/底座尺寸.jpg" alt="img-1" width="400" height=“auto” /> <br>
+<!-- <img src="../..//resources/4-FirstInstallAndUse/底座尺寸.jpg" alt="img-1" width="400" height=“auto” /> <br> -->
 
-- The end is mounted with flange and is compatible with both LEGO component holes and screw threaded holes. Please make sure that there are corresponding threaded holes on the fixed base before installing.
+- 末端采用法兰安装，兼容 LEGO 零件孔和螺丝螺纹孔，安装前请确保固定底座上有对应的螺纹孔。
 
+#### *安装前请确认：*
 
-#### *Before the installation, please confirm:*
+- 环境条件符合上述2.2.1.3.1节所列要求。
 
-- The environmental condition meets the requirements listed in Section 2.2.1.3.1 above.
+- 安装位置不小于机器人工作范围，并有足够的安装、使用、维护和维修空间。
 
-- The installation position is no smaller than the working range of the robot, and there is enough space for installation, use, maintenance and repair.
+- 将底座放置在合适的位置。
 
-- Put the base in a suitable position.
+- 安装相关工具已准备好，如螺钉、扳手等。
 
-- Installation-related tools are prepared, such as screws, wrenches, etc.
+- 确认以上内容后，请将机器人移至底座安装台上，调整机器人位置，将机器人底座固定孔与底座安装台上的孔对齐。对齐孔位后，将螺钉对准孔位并拧紧。
 
-- After confirming the above, please move the robot to the base installation table, adjust the robot position, and align the fixing holes of the robot base with the holes on the base mounting table. After aligning the holes, align the screws with the holes and tighten them.
+> **注意：** 在底座安装台上调整机器人位置时，请勿直接在底座安装台上推拉机器人，以免划伤。手动移动机器人时，请勿对机器人本体的脆弱部位施加外力，以免对机器人造成不必要的损坏。
 
-  > **Notice:** When adjusting the position of the robot on the base installation table, do not pushing or pulling the robot directly on the base installation table to avoid scratches. When manually moving the robot, do not applying external force to the fragile parts of the robot body, so as to avoid unnecessary damage to the robot.
-  
-**For more installation details, scan the code to watch the video:**
-  
-![image-20220524105531296](../..//resources/4-FirstInstallAndUse/320QRcode.png)
+<!-- **更多安装细节，扫码观看视频：**
 
-## 2 External cable connection
+![image-20220524105531296](../..//resources/4-FirstInstallAndUse/320QRcode.png) -->
 
-Before operation, confirm that you have read **Chapter Safety Instructions** to ensure safe operation. At the same time, connect the power adapter with the robotic arm, and fix the base of the robotic arm on the table. 
+## 2 外部线缆连接
 
-myCobot must be powered on with an external power supply to provide sufficient power:
-- Rated voltage: 24V
-- Rated current: 9.4A
-- Plug Type: R7B
-![image-20220620175457856](../../resources/4-FirstInstallAndUse/320-R7B.png)
+操作前，请确认已阅读**安全须知**章节，确保安全操作。同时将电源适配器与机械臂连接，将机械臂底座固定在桌面上。
 
-**Note that you cannot just use the TypeC plugged into the M5Stack-basic for power.** Use an officially adapted power supply to avoid damage to the robotic arm.
+myCobot 必须使用外部电源供电才能提供足够的电力：
+- 额定电压：24V
+- 额定电流：9.4A
+- 插头类型：R7B
+<!-- ![image-20220620175457856](../../resources/4-FirstInstallAndUse/320-R7B.png) -->
 
-The use case diagram is shown in the following figure: (Please carefully align it with the use case diagram for connection)
+**请注意，您不能只使用插入 M5Stack-basic 的 TypeC 供电。**请使用官方改装的电源，以免损坏机械臂。
 
-**Step 1:**<br>
-<img  src="../../resources/4-FirstInstallAndUse/connect/急停安装1.jpg" width="500" />
-<br/> 
+用例图如下图所示：（请仔细与用例图对齐进行连接）
 
-**Step 2:**<br>
-<img  src="../../resources/4-FirstInstallAndUse/connect/急停安装2.jpg" width="500" />
+<!-- **步骤1：**<br>
+<img src="../../resources/4-FirstInstallAndUse/connect/急停安装1.jpg" width="500" />
 <br/>
 
-**Step 3:**<br>
-<img  src="../../resources/4-FirstInstallAndUse/connect/急停安装3.jpg" width="500" />
+**步骤2：**<br>
+<img src="../../resources/4-FirstInstallAndUse/connect/急停安装2.jpg" width="500" />
 <br/>
 
-**Step 4:**<br>
-<img  src="../../resources/4-FirstInstallAndUse/connect/电源安装1.jpg" width="500" />
+**步骤3：**<br>
+<img src="../../resources/4-FirstInstallAndUse/connect/急停安装3.jpg" width="500" />
 <br/>
 
-**Step 5:**<br>
-<img  src="../../resources/4-FirstInstallAndUse/connect/电源安装2.jpg" width="500" />
+**步骤4：**<br>
+<img src="../../resources/4-FirstInstallAndUse/connect/电源安装1.jpg" width="500" />
 <br/>
 
-**Step 6:**<br>
-<img  src="../../resources/4-FirstInstallAndUse/connect/电源安装3.jpg" width="500" />
+**步骤5：**<br>
+<img src="../../resources/4-FirstInstallAndUse/connect/电源安装2.jpg" width="500" />
 <br/>
 
+**步骤6：**<br>
+<img src="../../resources/4-FirstInstallAndUse/connect/电源安装3.jpg" width="500" />
+<br/> -->
 
-## 3 Power on status display
+## 3 通电状态显示
 
-Make sure that the power adapter and emergency stop switch are connected, press the power switch **Start button (round)**, then the **LED light panel of ATOM at the end of the robot arm will light**, and the **LED light panel at the bottom of the robot arm will light up**. **BASIC interface** will display  **Atom communication status**.
+确保电源适配器和急停开关已连接，按下电源开关**启动按钮（圆形）**，此时机械臂末端的**ATOM LED灯板会亮起**，机械臂底部的**LED灯板会亮起**。**BASIC界面**会显示**Atom通讯状态**。
 
-![led](../../resources/4-FirstInstallAndUse/led灯板.jpg)
+<!-- ![led](../../resources/4-FirstInstallAndUse/led灯板.jpg) -->
 
-## 4 Basic function detection
+## 4 基本功能检测
 
-When performing this operation, please refer to section [5.1-4 Robot Information](/5-BasicApplication/5.1-SystemUsageInstructions/320m5/4.2.4.1-micro_controller.md) for guidance. Prior to proceeding, ensure that you have followed the electrical connection instructions mentioned above and confirm that your device is securely installed. Failure to properly connect the cables or secure the device may result in accidents. Thank you for your cooperation.
+执行此操作时，请参考 [5.1-4 机器人信息](/5-BasicApplication/5.1-SystemUsageInstructions/320m5/4.2.4.1-micro_controller.md) 章节获取指导。在继续操作之前，请确保您已遵循上述电气连接说明，并确认您的设备已安全安装。未正确连接电缆或未固定设备可能会导致事故。感谢您的合作。
 
 ----
 
-[← Previous Page](4.2-ProductUnboxingGuide.md) | [Next Chapter →](../5-BasicApplication/5-BasicApplication.md)
+[← 上一页](4.2-ProductUnboxingGuide.md) | [下一章 →](../5-BasicApplication/5-BasicApplication.md)
