--- a/3-UserNotes/3.1-SafetyInstruction.md
+++ b/3-UserNotes/3.1-SafetyInstruction.md
@@ -1,79 +1,79 @@
-# Safety Instructions
+# 安全须知
 
-## 1 Synopsis
+## 1 概要
 
-  This chapter details general safety information for personnel performing installation, maintenance, and repair work on elephant robots. Read and understand the contents and precautions in this chapter before carrying, installing, and using it.
+本章详细介绍了对大象机器人进行安装、维护和维修工作的人员的一般安全信息。在携带、安装和使用之前，请阅读并理解本章的内容和注意事项。
 
-## 2 Hazard identification
+## 2 危险识别
 
-  The safety of cooperative robots is based on the proper configuration and use of robots. Furthermore, injury or damage caused by the operator may occur even if all safety instructions are followed. Therefore, it is very important to understand the safety risks of robot use in order to prevent them.
+协作机器人的安全基于机器人的正确配置和使用。此外，即使遵守所有安全说明，也可能会发生操作员造成的伤害或损坏。因此，了解机器人使用的安全风险以预防这些风险非常重要。
 
-  Table 1-1 to 3 lists the common security risks that may occur when robots are used∶
+表 1-1 至 3 列出了使用机器人时可能出现的常见安全风险：
 
-<center>Table 1-1 Risk level Security risks</center>
+<center>表 1-1 风险等级 安全风险</center>
 
-| <img src="../resources/3-UserNotes/image/danger.png" title="" alt="" data-align="center">       |
+| <img src="../resources/3-UserNotes/image/danger.png" title="" alt="" data-align="center"> |
 | ---------------------------------------------------------------------- |
-| 1 Personal injury or robot damage caused by improper handling of the robot. |
-| 2 If the robot is not fixed as required, for example, the screw is missing or the screw is not tight, or the locking capacity of the base is insufficient to support the robot to move at high speed, the robot will fall over, resulting in personal injury or robot damage. |
-| 3 The robot's safety function fails to play its role due to the incorrect configuration of safety functions or the lack of safety protection tools. |
+| 1 因不当操作机器人而导致人身伤害或机器人损坏。 |
+| 2 如果机器人未按要求固定，如螺钉缺失或螺钉拧紧不紧，或底座锁紧力不足以支撑机器人高速运动，则会导致机器人翻倒，造成人身伤害或机器人损坏。 |
+| 3 安全功能配置不正确或缺乏安全防护工具，导致机器人安全功能无法发挥作用。 |
 
-<center>Table 1-2 Warning security risks</center>
+<center>表1-2 警告安全风险</center>
 
-| <img src="../resources/3-UserNotes/image/warning.png" title="" alt="" data-align="center">               |
-| ------------------------------------------------------------------------------- |
-| 1 When debugging the program, do not stay within the robot's motion range. Improper safety configuration may fail to avoid collisions, potentially causing personal injury. |
-| 2 The connection between robots and other equipment may introduce new hazards, necessitating a comprehensive risk assessment. |
-| 3 Be cautious of scratches and punctures caused by sharp surfaces, such as other equipment in the working environment or robot end effectors. |
-| 4 Robots are precision machines; stepping on them can cause damage. Improper placement during transportation may lead to vibration, affecting internal parts and causing damage. Therefore, ensure stability and mechanical structural integrity in all circumstances. |
-| 5 Failure to remove a clamped object before powering off the robot (when the clamping is not secure) may lead to dangers such as damage to the end effector or injuries if the clamped object falls due to power loss. |
-| 6 There is a risk of unexpected robot movement. Never stand under any axis of the robot under any circumstances! |
-| 7 Compared to ordinary mechanical equipment, robots have more degrees of freedom and a larger range of motion. Failure to stay within the range of motion may result in unexpected collisions. |
+| <img src="../resources/3-UserNotes/image/warning.png" title="" alt="" data-align="center"> |
+| ---------------------------------------------------------------------------------------------- |
+| 1 调试程序时，请勿停留在机器人运动范围内，安全配置不当可能无法避免碰撞，可能造成人身伤害。 |
+| 2 机器人与其他设备的连接可能引入新的危险，需要进行全面的风险评估。 |
+| 3 小心被工作环境中的其他设备或机器人末端执行器等锋利表面划伤或刺伤。|
+| 4 机器人是精密机械，踩踏可能会造成损坏。运输过程中放置​​不当可能会导致振动，影响内部零件并造成损坏。因此，在任何情况下都要确保稳定性和机械结构的完整性。|
+| 5 在关闭机器人电源之前（夹紧不牢固时）未移除夹紧的物体，可能会导致夹紧物体因断电而掉落，从而导致末端执行器损坏或受伤等危险。|
+| 6 机器人存在意外运动的风险。在任何情况下都不要站在机器人的任何轴下！|
+| 7 机器人与普通机械设备相比，自由度更多，运动范围更大。未保持在运动范围内可能会导致意外碰撞。|
 
-<center>Table 1-3 Potential safety hazards that may lead to electric shock</center>
+<center>表 1-3 可能导致触电的潜在安全隐患</center>
 
 | <img src="../resources/3-UserNotes/image/careful.png" title="" alt="" data-align="center"> |
 | ----------------------------------------------------------------- |
-| 1 Unknown hazards may arise when using non-original cables. |
-| 2 Electrical equipment contact with liquid may cause leakage hazard. |
-| 3 Electrical connection error may cause electric shock. |
-| 4 Be sure to switch off the power supply of the controller and related devices and remove the power plug before replacement. If the operation is carried out with power on, it may cause electric shock or failure. |
+| 1 使用非原装电缆可能产生未知危险。 |
+| 2 电气设备接触液体可能产生漏电危险。 |
+| 3 电气连接错误可能引起触电。 |
+| 4 更换前请务必关闭控制器及相关设备电源并拔下电源插头。如果带电操作，可能导致触电或故障。 |
 
-## 3 Safety Precautions
+## 3 安全注意事项
 
-**The following safety rules should be followed when using the manipulator:**
+**使用机械臂时，应遵守以下安全规则：**
 
--  The mechanical arm belongs to live equipment. Non-professionals are not allowed to change the circuit at will, otherwise it may cause damage to the equipment or human body.
-- When operating mechanical arms, comply with local laws and regulations. The safety precautions and dangers, Warnings, and precautions described in this manual are only supplements to the local safety regulations.
-- Please use the mechanical arm within the specified environment. Exceeding the specifications and load conditions of the mechanical arm will shorten the service life of the product and even damage the equipment.
-- The person installing, operating and maintaining the myCobot arm, anyway, has to be rigorously trained on safety precautions and the right way to operate and maintain the robot.
-- Anyway, don't use the product in humid environments for long periods of time. This product is a precision electronic component, which will damage the equipment in damp environment for a long time.
-- Anyway, don't use the product in humid environments for long periods of time. This product is a precision electronic component, which will damage the equipment in damp environment for a long time.
-- Highly corrosive cleaning is not suitable for cleaning the mechanical arm, and anodized parts are not suitable for immersion cleaning.
-- Unconsciously, do not use the device without installing a base to avoid damaging the device or accidents, instead use the device in a fixed environment without obstacles.
-- Do not use other power adapters for power supply. If the equipment is damaged due to the use of non-standard adapters, the after-sales service will not be included.
-- Do not disassemble, disassemble, or unscrew the screws or shell of the manipulator. If disassembled, no warranty service can be provided.
-- Personnel without professional training are not allowed to repair the faulty products and dismantle the mechanical arm without permission. If the products fail, please contact myCobot technical support engineers in time.
-- If the product is discarded, please comply with the relevant laws to properly dispose of industrial waste and protect the environment.
-- A child uses a device at some point, forcing someone to monitor the process and switch it off when it's finished.
-- When the robot is moving, do not extend your hand into the movement range of the robot arm, for fear of collision. 
-- It is strictly prohibited to change, remove or modify the nameplate, description, icon and mark of the manipulator and related equipment.
--  Please be careful in handling and installation. Put the robot gently according to the instructions on the packing case and place it correctly in the direction of the arrow. Otherwise, the machine may be damaged.
-- **Do not burn other product drivers from Atom terminal, or burn firmware using unofficial recommendations. If the equipment is damaged due to the user burning other firmware, it will not be in the after-sales service.**
-- Power supply specifications: **Use the official power supply**
-- USB Type-C usage specifications: **Do not connect to power strips**
+- 机械臂属于带电设备，非专业人员不得随意更改电路，否则可能对设备或人体造成伤害。
+- 操作机械臂时，请遵守当地法律法规。本手册中所述的安全注意事项和危险、警告、注意事项仅作为当地安全法规的补充。
+- 请在规定的环境中使用机械臂。超过机械臂的规格和负载条件将缩短产品使用寿命，甚至损坏设备。
+- 无论如何，安装、操作和维护 myCobot 机械臂的人员必须接受有关安全注意事项和正确操作和维护机器人方法的严格培训。
+- 无论如何，请勿长时间在潮湿环境中使用产品。本产品是精密电子元件，长时间在潮湿环境中会损坏设备。
+- 无论如何，请勿长时间在潮湿环境中使用产品。本产品为精密电子元器件，长期处于潮湿环境中会对设备造成损害。
+- 强腐蚀性清洗不宜用于机械臂清洗，阳极氧化部件不宜浸泡清洗。
+- 请勿在不自觉的情况下，未安装底座就使用设备，避免损坏设备或发生事故，应在固定且无障碍的环境中使用设备。
+- 请勿使用其他电源适配器供电，如因使用非标准适配器导致设备损坏，将不包含在售后服务范围内。
+- 请勿拆卸、拆解、拧开机械手螺丝或外壳，如拆卸，将不提供保修服务。
+- 未经专业培训的人员不得擅自维修故障产品，不得擅自拆卸机械臂。如产品发生故障，请及时联系myCobot技术支持工程师。
+- 如产品被丢弃，请遵守相关法律，妥善处理工业废弃物，保护环境。
+- 小孩在某个时候使用设备，迫使某人监视该过程并在完成后将其关闭。
+- 机器人移动时，请勿将手伸入机械臂的运动范围，以免发生碰撞。
+- 严禁更改、移除或修改机械手和相关设备的铭牌、说明、图标和标记。
+- 请小心搬运和安装。按照包装箱上的指示轻轻放置机器人，并按照箭头方向正确放置。否则，机器可能会损坏。
+- **不要从Atom终端刻录其他产品驱动程序，或使用非官方建议刻录固件。若因用户烧录其他固件导致设备损坏，则不在售后服务范围内。**
+- 电源规格：**请使用官方电源**
+- USB Type-C使用规格：**请勿连接电源板**
 
-**If you have any questions or suggestions about the contents of this manual, please log in the official website of Elephant Robot and submit relevant information：**
+**如对本手册内容有任何疑问或建议，请登录大象机器人官网提交相关信息：**
 
 https://www.elephantrobotics.com
 
-**Please do not use the mechanical arm for the following purposes：**
+**请勿将机械臂用于以下用途：**
 
-- Cost of healthcare in life-critical applications.
-- Buying a bus can cause an explosion in an environment.
-- Lent is used directly without a risk assessment.
-- Cost of using a security function at a low level.
-- Lo-fi does not conform to the use of robot performance parameters.
+- 生命攸关应用中的医疗保健成本。
+- 购买公交车在环境中可能引起爆炸。
+- 未经风险评估直接使用。
+- 低级使用安全功能的成本。
+- Lo-fi 不符合机器人性能参数的使用。
 
 ----
-[← Previous Section](3-UserNotes.md#) | [Next Chapter →](3.2-TransportandStorage.md)
+[← 上一节](3-UserNotes.md#) | [下一章 →](3.2-TransportandStorage.md)
