--- a/3-UserNotes/3.4-FAQsandSolutions.md
+++ b/3-UserNotes/3.4-FAQsandSolutions.md
@@ -1,23 +1,20 @@
-# Common Problem
+#常见问题
 
+本部分列出了一些常见的驱动相关问题、软件相关问题和硬件相关问题。
 
-In this part, some common driver-related problems, software-related problems and hardware-related problems are listed.
+[1 如何优雅地提问](IssueFAQ/how_to_ask.md)
 
+[2 驱动相关问题](IssueFAQ/driver.md)
 
-[1 How To Ask Questions Gracefully](IssueFAQ/how_to_ask.md)
+[3 软件问题](IssueFAQ/software.md)
 
-[2 Drive Related](IssueFAQ/driver.md)
+[4 硬件问题](IssueFAQ/hardware.md)
 
-[3 Software Problem](IssueFAQ/software.md)
+如果您有购买意向或任何参数问题，请发邮件至此邮箱。
+[邮箱](sales@elephantrobotics.com) : "sales@elephantrobotics.com"
 
-[4 Hardware Problem](IssueFAQ/hardware.md)
-
-If you have purchase intention or any parameter questions, please send an email to this mailbox.    
-[E-mail](sales@elephantrobotics.com) :  "sales@elephantrobotics.com"
-
-
-If the listed problems can't help you solve and you have more after-sales questions, please send an email to this mailbox.  
-[E-mail](support@elephantrobotics.com) : "support@elephantrobotics.com"
+如果列出的问题不能帮您解决，您还有更多的售后问题，请发邮件至此邮箱。
+[电子邮件](support@elephantrobotics.com) : "support@elephantrobotics.com"
 
 ----
-[← Previous Section](3.3-MaintenanceandCare.md#) | [Next Chapter →](/4-FirstInstallAndUse/4-FirstInstallAndUse.md)
+[← 上一节](3.3-MaintenanceandCare.md#) | [下一章 →](/4-FirstInstallAndUse/4-FirstInstallAndUse.md)
