--- a/4-FirstInstallAndUse/4.1-ProductStandardList.md
+++ b/4-FirstInstallAndUse/4.1-ProductStandardList.md
@@ -1,25 +1,25 @@
-# Product Standard List
+# 产品标准清单
 
-## 1 Product List Picture
+## 1 产品清单图片
 
 <img src="../../resources/4-FirstInstallAndUse/list/微信图片_20240206160327.jpg" alt="img-1" width="800" height=“auto” /> <br>
 
-Each product is numbered and detailed to ensure you can accurately refer to your listing.
+每件产品均有编号和详细说明，确保您可以准确参考您的清单。
 
-## 2 Product Standard List Comparison Table
+## 2 产品标准清单对照表
 
-| Serial number | Product |
+| 序列号 | 产品 |
 |------------|-----------------|
-| 1 | MyCobot 320 M5 Robotic Arm |
-| 2 | Product Brochure |
-| 3 | Product kit, including USB-Type C, jumper, M6*35, cup head hexagon, fully threaded, stainless steel screws |
-| 4 | 24V, 9.2A supporting power supply |
-| 5 | Flat base |
-| 6 | Clamp holder |
-| 7 | E-Stop Key |
+| 1 | MyCobot 320 M5 机械臂 |
+| 2 | 产品手册 |
+| 3 | 产品套件，包括 USB-Type C、跳线、M6*35、杯头六角、全螺纹、不锈钢螺丝 |
+| 4 | 24V、9.2A 配套电源 |
+| 5 | 平底座 |
+| 6 | 夹持器 |
+| 7 | 急停键 |
 
-**Note:** After the packaging box is in place, please confirm that the robot packaging is intact. If there is any damage, please contact the logistics company and the supplier in your region in time. After unpacking, please check the actual contents in the box according to the item list.
+**注意：**包装箱到位后，请确认机器人包装完好，如有破损请及时联系物流公司及您所在地区的供应商。开箱后请根据物品清单检查箱内实际物品。
 
 ---
 
-[← Previous Page](./4-FirstInstallAndUse.md) | [Next Page →](./4.2-ProductUnboxingGuide.md)
+[← 上一页](./4-FirstInstallAndUse.md) | [下一页 →](./4.2-ProductUnboxingGuide.md)
