--- a/9-AboutUs/9.2-contact.md
+++ b/9-AboutUs/9.2-contact.md
@@ -1,31 +1,31 @@
-### Contact Us
+### 联系我们
 
-> Our working hours are on Chinese working days, from 10 AM to 6 PM Beijing time.
+> 我们的工作时间为中国工作日，北京时间上午10点至下午6点。
 
-If you have any other problems, contact us via the ways below.  
-**Email** :  
+如果您有其他问题，请通过以下方式联系我们。
+**电子邮件**：
 
-If you have purchase intention or any parameter questions, please send an email to this mailbox.    
-[E-mail](sales@elephantrobotics.com) :    
+如果您有购买意向或任何参数疑问，请发送电子邮件至此邮箱。
+[电子邮件](sales@elephantrobotics.com)：
 <pre>
 <code class="copyable">
 sales@elephantrobotics.com
 </code>
-</pre> 
-If the listed problems can't help you solve and you have more after-sales questions, please send an email to this mailbox.  
-[E-mail](support@elephantrobotics.com) : 
+</pre>
+如果列出的问题不能帮助您解决，并且您有更多售后问题，请发送电子邮件至此邮箱。
+[电子邮件](support@elephantrobotics.com)：
 <pre>
 <code class="copyable">
 support@elephantrobotics.com
 </code>
-</pre>   
-We will give a reply within 1-2 business days;  
+</pre>
+我们将在1-2个工作日内回复；
 
-**WeChat**: 
-We provide one-to-one service only for those users who have purchased   
-myCobot via WeChat.
+**微信**:
+我们只为通过微信购买
+myCobot 的用户提供一对一服务。
 
 ![](../resources/9-AboutUs/image/微信图片_20220225152258.jpg)
 
 ---
-[← Previous Page](./9.1-company.md)
+[← 上一页](./9.1-company.md)
