--- a/4-FirstInstallAndUse/4.3-Power-onTestGuide.md
+++ b/4-FirstInstallAndUse/4.3-Power-onTestGuide.md
@@ -2,77 +2,74 @@
 
 ## 1 结构安装固定
 
-myCobot 重量 3.3kg，由于使用过程中重心会随着机器人的移动而变化，因此一开始需要将机器人固定在一个牢固的底座上，固定底座，移动底座都可以。
+myCobot 重量为 3.5kg，由于使用过程中重心会随着机器人的移动而变化，因此一开始需要将机器人固定在一个牢固的底座上，固定底座，移动底座都可以。
 
 #### 底座接口尺寸
 
-* 底座固定孔是机器人与其他底座或平面的接口，具体孔径如下图所示，共有 4 个直径为 4.5mm 的沉头孔，可用 M6 螺栓固定。
+* 底座固定孔是机器人与其他底座或平面的接口，具体孔位尺寸如下图所示，共有 4 个直径为 4.5mm 的沉头孔，可用 M6 螺栓固定。
 
-<!-- <img src="../..//resources/4-FirstInstallAndUse/底座尺寸.jpg" alt="img-1" width="400" height=“auto” /> <br> -->
+<img src="../resources/4-FirstInstallAndUse/底座尺寸.png" alt="img-1" width="400" height=“auto” /> <br>
 
-- 末端采用法兰安装，兼容 LEGO 零件孔和螺丝螺纹孔，安装前请确保固定底座上有对应的螺纹孔。
+- 末端安装有法兰，安装前请确保固定底座上有对应的螺纹孔。
 
 #### *安装前请确认：*
 
-- 环境条件符合上述2.2.1.3.1节所列要求。
+- 环境条件符合上述3.1节所列要求。
 
 - 安装位置不小于机器人工作范围，并有足够的安装、使用、维护和维修空间。
 
 - 将底座放置在合适的位置。
 
-- 安装相关工具已准备好，如螺钉、扳手等。
+- 准备好安装相关工具，如螺钉、扳手等。
 
 - 确认以上内容后，请将机器人移至底座安装台上，调整机器人位置，将机器人底座固定孔与底座安装台上的孔对齐。对齐孔位后，将螺钉对准孔位并拧紧。
 
 > **注意：** 在底座安装台上调整机器人位置时，请勿直接在底座安装台上推拉机器人，以免划伤。手动移动机器人时，请勿对机器人本体的脆弱部位施加外力，以免对机器人造成不必要的损坏。
 
-<!-- **更多安装细节，扫码观看视频：**
-
-![image-20220524105531296](../..//resources/4-FirstInstallAndUse/320QRcode.png) -->
-
 ## 2 外部线缆连接
 
-操作前，请确认已阅读**安全须知**章节，确保安全操作。同时将电源适配器与机械臂连接，将机械臂底座固定在桌面上。
+操作前，请确认已阅读**安全须知**章节，确保操作安全。同时将电源适配器与机械臂连接，并将机械臂底座固定在桌面上。
 
-myCobot 必须使用外部电源供电才能提供足够的电力：
+myCobot 必须使用外部电源供电，以提供足够的电力：
 - 额定电压：24V
 - 额定电流：9.4A
 - 插头类型：R7B
-<!-- ![image-20220620175457856](../../resources/4-FirstInstallAndUse/320-R7B.png) -->
 
-**请注意，您不能只使用插入 M5Stack-basic 的 TypeC 供电。**请使用官方改装的电源，以免损坏机械臂。
+![image-20220620175457856](../resources/4-FirstInstallAndUse/320-R7B.png)
 
-用例图如下图所示：（请仔细与用例图对齐进行连接）
+**注意不能直接使用 M5Stack-basic 插上的 TypeC 供电。**请使用官方适配的电源，以免损坏机械臂。
 
-<!-- **步骤1：**<br>
-<img src="../../resources/4-FirstInstallAndUse/connect/急停安装1.jpg" width="500" />
+用例图如下图所示：（请仔细与用例图对齐，以便连接）
+
+**步骤1：**<br>
+<img src="../resources/4-FirstInstallAndUse/connect/急停安装1.jpg" width="500" />
 <br/>
 
 **步骤2：**<br>
-<img src="../../resources/4-FirstInstallAndUse/connect/急停安装2.jpg" width="500" />
+<img src="../resources/4-FirstInstallAndUse/connect/急停安装2.jpg" width="500" />
 <br/>
 
 **步骤3：**<br>
-<img src="../../resources/4-FirstInstallAndUse/connect/急停安装3.jpg" width="500" />
+<img src="../resources/4-FirstInstallAndUse/connect/急停安装3.jpg" width="500" />
 <br/>
 
 **步骤4：**<br>
-<img src="../../resources/4-FirstInstallAndUse/connect/电源安装1.jpg" width="500" />
+<img src="../resources/4-FirstInstallAndUse/connect/电源安装1.jpg" width="500" />
 <br/>
 
 **步骤5：**<br>
-<img src="../../resources/4-FirstInstallAndUse/connect/电源安装2.jpg" width="500" />
+<img src="../resources/4-FirstInstallAndUse/connect/电源安装2.jpg" width="500" />
 <br/>
 
 **步骤6：**<br>
-<img src="../../resources/4-FirstInstallAndUse/connect/电源安装3.jpg" width="500" />
-<br/> -->
+<img src="../resources/4-FirstInstallAndUse/connect/电源安装3.jpg" width="500" />
+<br/>
 
 ## 3 通电状态显示
 
 确保电源适配器和急停开关已连接，按下电源开关**启动按钮（圆形）**，此时机械臂末端的**ATOM LED灯板会亮起**，机械臂底部的**LED灯板会亮起**。**BASIC界面**会显示**Atom通讯状态**。
 
-<!-- ![led](../../resources/4-FirstInstallAndUse/led灯板.jpg) -->
+![led](../resources/4-FirstInstallAndUse/led灯板.jpg)
 
 ## 4 基本功能检测
 
