--- a/4-FirstInstallAndUse/4.1-ProductStandardList.md
+++ b/4-FirstInstallAndUse/4.1-ProductStandardList.md
@@ -2,7 +2,7 @@
 
 ## 1 产品清单图片
 
-<img src="../../resources/4-FirstInstallAndUse/list/微信图片_20240206160327.jpg" alt="img-1" width="800" height=“auto” /> <br>
+<!-- <img src="../../resources/4-FirstInstallAndUse/list/微信图片_20240206160327.jpg" alt="img-1" width="800" height=“auto” /> <br> -->
 
 每件产品均有编号和详细说明，确保您可以准确参考您的清单。
 
@@ -10,15 +10,14 @@
 
 | 序列号 | 产品 |
 |------------|-----------------|
-| 1 | MyCobot 320 M5 机械臂 |
+| 1 | Mercury_A1 |
 | 2 | 产品手册 |
 | 3 | 产品套件，包括 USB-Type C、跳线、M6*35、杯头六角、全螺纹、不锈钢螺丝 |
 | 4 | 24V、9.2A 配套电源 |
-| 5 | 平底座 |
-| 6 | 夹持器 |
-| 7 | 急停键 |
+| 5 | 铝合金底座 |
+| 6 | 急停键 |
 
-**注意：**包装箱到位后，请确认机器人包装完好，如有破损请及时联系物流公司及您所在地区的供应商。开箱后请根据物品清单检查箱内实际物品。
+**注意：**包装箱到位后，请确认机器人包装完好，如有破损请及时联系物流公司及所在地区供应商。开箱后请根据物品清单检查箱内实际物品。
 
 ---
 
