优化*不被转义

--- a/2-ProductFeature/2.1-MachineSpecification.md
+++ b/2-ProductFeature/2.1-MachineSpecification.md
@@ -8,7 +8,7 @@
 |:------------------------------:|:--------------------------------------------:|
 | Name                           | Elephant Consumer Robotic Arm                |
 | Model                          | MercuryA1                                    |
-| Product Size                   | 98*128*640mm                                 |
+| Product Size                   | 98\*128\*640mm                                 |
 | Freedom                        | 7                                            |
 | Working Radius                 | 450mm                                        |
 | Efficient Load                 | 1kg                                          |
