--- a/1-ProductIntroduction/1.1-DesignPhilosophy.md
+++ b/1-ProductIntroduction/1.1-DesignPhilosophy.md
@@ -1,1 +1,7 @@
 ## 1 设计理念
+
+Mercury A1 是一款轻型七自由度机械臂，有效负载为 1 公斤，搭载7颗大象机器人全新自研”力源“系列谐波模组。最大输出扭矩可达80Nm，编码器分辨率19bit，重复定位精度高达0.6弧分；全新的七轴工业设计由瑞典团队精心操刀，整机使用超轻量碳纤维外壳，减重的同时大幅提高整机强度和刚性。主控 CM4Stack 配备 2.0 英寸 IPS-LCD 电容式触摸屏，集成大象自主开发的 myPanel，无需编程即可直观地部署应用程序，是教学科研和具身智能研究理想的硬件平台。
+
+ <center>
+<img src="../resources/1-ProductIntroduction/A1.jpg" width="400" height="auto" />
+</center>
