添加转义字符

--- a/2-ProductFeature/2.1-MachineSpecification.md
+++ b/2-ProductFeature/2.1-MachineSpecification.md
@@ -6,7 +6,7 @@
 |:------------------------------:|:--------------------------------------------:|
 | 名称 | 大象消费级机械臂 |
 | 型号 | MercuryA1 |
-| 产品尺寸 | 98*128*640mm |
+| 产品尺寸 | 98\*128\*640mm |
 | 自由度 | 7 |
 | 工作半径 | 450mm |
 | 有效负载 | 1kg |
