错误开箱视频移除，添加网口介绍

--- a/2-ProductFeature/2.4-ElectricalCharacteristicParameter.md
+++ b/2-ProductFeature/2.4-ElectricalCharacteristicParameter.md
@@ -3,12 +3,12 @@
 ## 1 Base Interface Overview
 <img src="../resources/2-ProductFeature/左视图.jpg " width="800" height="auto" />
 
-Figure 2.4.1 Left side of the base
+Figure 1 Left side of the base
 
 
 <img src="../resources/2-ProductFeature/前视图.jpg " width="800" height="auto" />
 
-Figure 2.4.2 Front view of a base
+Figure 2 Front view of a base
 
 
 
@@ -16,18 +16,23 @@ Figure 2.4.2 Front view of a base
 
 Figure 3 Right side of the base
 
+<img src="../resources/2-ProductFeature/底座网口.png" width="800" height="auto" />
+
+Figure 4 Bottom side of the base
+
 ## 1.1 Base Interface Description
-| Number | Interface    | Definition | Function         | Remarks         |
+| No. | Interface | Definition | Function | Remarks |
 |:----:|:--------------:|:---------:|:-----------------:|:----------------:|
-| 1    | Switch         | Power Switch  | Control power on/off  | With indicator (on when powered) | 
-| 2    |STOP | STOP      | Emergency stop circuit interface |             |   
-| 3    | USB3.2       | USB3.2*2   | External device or USB flash drive connection   |                  |                    
-| 5    | HDMI        |   |Connects to the display   |       |
-| 6    | Serial Port     |   |Communication interface for transmitting and receiving serial data   |       |
-| 7    | I2C Interface      |   |Connects to I2C devices   |       |
-| 8    | USB2.0       | USB2.0   | External device or USB flash drive connection  |                |
-| 9    | Type C         | Communication Interface | Communication with PC | For development use |
-| 10   | Power Input Interface | DC24V Input | DC24V  Input |                  |
+| 1    | Switch         | Power Switch  | Controls the power input on/off  | With light (lights up when powered) | 
+| 2    | Emergency Stop Interface | STOP      | Emergency stop circuit interface |             |   
+| 3    | USB3.2       | USB3.2*2   | Can connect external devices or USB drives   |                  |                    
+| 5    | HDMI        |   | Used for connecting display screens   |       |
+| 6    | Serial Port        |   | Used for transmitting and receiving serial data   |       |
+| 7    | I2C Interface       |   | Used for connecting I2C devices   |       |
+| 8    | USB2.0       | USB2.0   | Can connect external devices or USB drives   |                |
+| 10    | Type C         | Communication Interface | Communicates with PC | For development use |
+| 11  | Power Input Interface | DC24V Input | DC24V Input |                  |
+| 12  | Network Port |  | Used for network access |                  |
 
 
 #### 1 Power Switch: Controls the on/off of the main power input. When turned off, the controller is also powered off.
