git commit -m 错误开箱视频移除，添加网口介绍

--- a/2-ProductFeature/2.4-ElectricalCharacteristicParameter.md
+++ b/2-ProductFeature/2.4-ElectricalCharacteristicParameter.md
@@ -17,6 +17,10 @@
 
 图3 底座右视图
 
+<img src="../resources/2-ProductFeature/底座网口.png" width="800" height="auto" />
+
+图4 底座仰视图
+
 ## 1.1 底座接口说明
 | 编号 | 接口    | 定义 | 功能         | 备注         |
 |:----:|:--------------:|:---------:|:-----------------:|:----------------:|
@@ -29,6 +33,7 @@
 | 8    | USB2.0       | USB2.0   | 可外接设备或U盘   |                |
 | 10    | Type C         | 通讯接口 | 与PC机通讯 | 开发使用 |
 | 11  | 电源输入接口 | DC24V输入 | DC24V 输入 |                  |
+| 12  | 网口 |  | 用于网络接入 |                  |
 
 
 #### 1 电源开关：控制总电源输入的通断，关闭时，控制器也断电
