--- a/4-FirstInstallAndUse/4.2-ProductUnboxingGuide.md
+++ b/4-FirstInstallAndUse/4.2-ProductUnboxingGuide.md
@@ -12,11 +12,11 @@
 
 **注意：** 拆卸产品后，请仔细检查每件物品的外观。请对照物品清单检查包装盒内的实际物品。
 
-## 2 产品开箱视频指南
+<!-- ## 2 产品开箱视频指南 -->
 
-<video id="my-video" class="video-js" controls preload="auto" width="100%"
+<!-- <video id="my-video" class="video-js" controls preload="auto" width="100%"
 poster="" data-setup='{"aspectRatio":"16:9"}'>
-<source src="https://static.elephantrobotics.com/wp-content/uploads/2022/04/%E8%8B%B1%E6%96%87%E7%89%88320%E5%BC%80%E7%AE%B1END2.mp4"></video>
+<source src="https://static.elephantrobotics.com/wp-content/uploads/2022/04/%E8%8B%B1%E6%96%87%E7%89%88320%E5%BC%80%E7%AE%B1END2.mp4"></video> -->
 
 ---
 
