--- a/4-FirstInstallAndUse/4.2-ProductUnboxingGuide.md
+++ b/4-FirstInstallAndUse/4.2-ProductUnboxingGuide.md
@@ -12,6 +12,13 @@ In this section we strongly recommend following the specified steps to remove th
 
 **Note:** After removing the product, please carefully inspect the appearance of each item. Please check the actual items in the box against the item list.
 
+## 2 Gripper Camera Installation Guide
+
+<video id="my-video" class="video-js" controls="" preload="auto" width="100%" poster="" data-setup="{&quot;aspectRatio&quot;:&quot;16:9&quot;}">
+
+  <source src="../resources/4-FirstInstallAndUse/Mercury夹爪安装.mp4" type="video/mp4">
+</video>
+
 <!-- ## 2 Product unboxing video guide
 
 <video id="my-video" class="video-js" controls preload="auto" width="100%"
